
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
struct amdgpu_ring {int dummy; } ;


 int AMDGPU_HAVE_CTX_SWITCH ;
 int AMDGPU_IB_PREEMPTED ;
 int AMDGPU_PREAMBLE_IB_PRESENT ;
 int AMDGPU_PREAMBLE_IB_PRESENT_FIRST ;
 int PACKET3 (int ,int) ;
 int PACKET3_CONTEXT_CONTROL ;
 scalar_t__ amdgpu_mcbp ;
 int amdgpu_ring_write (struct amdgpu_ring*,int) ;
 int gfx_v10_0_ring_emit_ce_meta (struct amdgpu_ring*,int) ;
 int gfx_v10_0_ring_emit_tmz (struct amdgpu_ring*,int) ;

__attribute__((used)) static void gfx_v10_0_ring_emit_cntxcntl(struct amdgpu_ring *ring, uint32_t flags)
{
 uint32_t dw2 = 0;

 if (amdgpu_mcbp)
  gfx_v10_0_ring_emit_ce_meta(ring,
        flags & AMDGPU_IB_PREEMPTED ? 1 : 0);

 gfx_v10_0_ring_emit_tmz(ring, 1);

 dw2 |= 0x80000000;
 if (flags & AMDGPU_HAVE_CTX_SWITCH) {

  dw2 |= 0x8001;

  dw2 |= 0x01000000;

  dw2 |= 0x10002;


  if (AMDGPU_PREAMBLE_IB_PRESENT & flags)
   dw2 |= 0x10000000;
 } else {



  if (AMDGPU_PREAMBLE_IB_PRESENT_FIRST & flags)
   dw2 |= 0x10000000;
 }

 amdgpu_ring_write(ring, PACKET3(PACKET3_CONTEXT_CONTROL, 1));
 amdgpu_ring_write(ring, dw2);
 amdgpu_ring_write(ring, 0);
}
